# pgstream

./: Cargo.toml  build.rs
proto/: pg_logicaldec.proto
src/: decoderbufs.rs  lib.rs  serde.rs  stream.rs
