[package]
name = "pgstream"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.37"

tracing = "0.1.37"


prost = { version = "0.11.3", default-features = false }
bigdecimal = { version = "=0.1.0", features = ["serde"] }

serde = { version = "1.0.148", features = ["derive"] }
serde_bytes = "0.11.7"

bytes = "1.3.0"
futures = "0.3.25"

pin-project-lite = "0.2.9"

tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"

tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }

[build-dependencies]
prost-build = "0.11.3"

[dev-dependencies]
tracing-subscriber = "0.3.16"